[package]
name = "qilin_logger"
version = "1.0.0"
description = "Cool rust logger."
license = "MIT"
repository = "https://github.com/qilin-moe/qilin-logger/tree/rs"
edition = "2021"
authors = ["Qilin :plead:"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
chrono = "0.4.31"